added resume, chat component, linked thru the right routes. Finished home page's design and content. added the right links to the websites.

--- a/manon-website/src/Components/Background/Background.css
+++ b/manon-website/src/Components/Background/Background.css
@@ -48,6 +48,7 @@ body {
   right: 0;
   bottom: 0;
   left: 0;
+  z-index: -1;
   background: url(https://i.imgur.com/wCG2csZ.png);
   background-size: cover;
   background-position: center;
