--- a/manon-website/src/Components/Home/Home.scss
+++ b/manon-website/src/Components/Home/Home.scss
@@ -4,24 +4,42 @@ body{
 };
 
 .home{
-    width: 500px;
+    width: 600px;
     margin-top: 40px;
     margin-right: auto;
     margin-left: auto;
-    background-color: #0077b6;
-    height: 500px;
+    background-color: #73bfb8;
+    height: 570px;
     align-self: center;
-    box-shadow: 0 5px 2px #013a63;
-    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%   ;
+    box-shadow: 0 5px 8px #000;
+    border-radius: 30% 70% 70% 30% / 30% 30% 60% 60%   ;
 };
-
+.home p {
+    color: #000;
+    line-height: 1.2;
+    letter-spacing: 1px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 10px;
+    padding-left:30px;
+    padding-right: 10px;
+}
+.groupText{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .photo{
     width: 150px;
+    background-size: cover;
+    background-repeat: 'no-repeat';
+    background-position: 0px -20px;
     height: 150px;
-    background-color: #4895ef;
-    border-radius: 50%;
-    margin-top: 60px;
-    margin-left: 75px;
+    border-radius: 8px;
+    margin-top: 15px;
+    margin-left: auto;
+    margin-right: 50%;
+    box-shadow: 0 2px 6px #000;
 };
 
 .photo p{
