--- a/manon-website/src/Components/NavBar/NavBar.css
+++ b/manon-website/src/Components/NavBar/NavBar.css
@@ -13,9 +13,9 @@
     color: aliceblue;
     font-family: 'Montserrat', sans-serif;
     font-size: 24px;
+    
 }
 .underlined{
-        color: white;
         display: flex;
         align-items: center;
         text-decoration: none;
@@ -49,4 +49,7 @@
     font-family: 'Montserrat', sans-serif;
     justify-content: center;
     align-items: center;
+}
+.listItems li{
+    color: aquamarine;
 }
