--- a/manon-website/src/Components/NavBar/NavBar.css
+++ b/manon-website/src/Components/NavBar/NavBar.css
@@ -13,9 +13,9 @@
     color: aliceblue;
     font-family: 'Montserrat', sans-serif;
     font-size: 24px;
-    
 }
 .underlined{
+        color: white;
         display: flex;
         align-items: center;
         text-decoration: none;
@@ -28,13 +28,7 @@
         font-weight: 300;
         letter-spacing: 0.6px;
 }
-.navbarContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80px;
-    max-width: 1400px;
-}
+
 .navGroup{
     padding: 0;
     flex-direction: row;
@@ -50,6 +44,6 @@
     justify-content: center;
     align-items: center;
 }
-.listItems li{
-    color: aquamarine;
+.listItems{
+    color: #fff;
 }
