--- a/manon-website/src/Components/Home/Home.scss
+++ b/manon-website/src/Components/Home/Home.scss
@@ -1,8 +1,8 @@
 body{
     margin: 0;
     padding: 0;
+    width: auto;
 };
-
 .home{
     width: 600px;
     margin-top: 40px;
@@ -12,10 +12,10 @@ body{
     height: 570px;
     align-self: center;
     box-shadow: 0 5px 8px #000;
-    border-radius: 30% 70% 70% 30% / 30% 30% 60% 60%   ;
+    border-radius: 30% 70% 70% 30% / 30% 60% 60% 60%   ;
 };
 .home p {
-    color: #000;
+    color: #013a63;
     line-height: 1.2;
     letter-spacing: 1px;
     margin-left: auto;
@@ -23,12 +23,12 @@ body{
     padding-top: 10px;
     padding-left:30px;
     padding-right: 10px;
-}
+};
 .groupText{
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+};
 .photo{
     width: 150px;
     background-size: cover;
@@ -41,11 +41,9 @@ body{
     margin-right: 50%;
     box-shadow: 0 2px 6px #000;
 };
-
 .photo p{
     text-align: center;
 };
-
 .bigTitle{
     font-family: 'Montserrat', sans-serif;
     font-weight: 150;
@@ -88,7 +86,6 @@ body{
       clip-path: $path;
     }
 };
-
 .cut-app {
     $random-text: 'Apps';
     position: relative;
@@ -119,7 +116,6 @@ body{
       clip-path: $path;
     }
 };
-
 .title{
     color: #fff;
     font-family: 'Montserrat', sans-serif;
@@ -129,7 +125,6 @@ body{
     text-transform: uppercase;
     padding-left: 50px;
 };
-
 .circleProject{
     width: 150px;
     background-color: #013a63;
@@ -141,43 +136,41 @@ body{
     background-size: cover;
     background-repeat: 'no-repeat';
 };
-
 .circleProject:hover div{
     cursor: pointer;
-}
-
+};
 .circleProject p{
     color: #fff;
-}
-
+};
 .allCircle{
     margin-top: 40px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-}
+};
 .websiteTitles{
     display: flex;
     flex-direction: column;
     width: 50%;
-}
+};
 .websiteTitles span{
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 50px;
-}
+};
 .websiteCircle{
     display: inline-flex;
     flex-direction: row;
+    align-items: center;
     justify-content: space-around;
-}
+};
 .appCircle{
     display: inline-flex;
     justify-content: space-around;
     flex-direction: row;
     width: 50%; 
-}
+};
 .innerCircle{
     display:flex;
     flex-direction: column;
@@ -186,31 +179,31 @@ body{
     position: relative;
     padding: 80px;
     text-align: center;
-}
-
+};
 .line{
     border-bottom:1px solid #b5e48c;
     width: 350px;
     margin-left: 0;
     margin-top: 100px;
-}
+};
 .circle-app{
     width: 150px;
     height: 150px;
-    margin-left: 88%;
+    left: 50px;
     z-index: 999;
     bottom: 10em;
     position: fixed;
     box-shadow: 0 2px 8px #4895ef;
     background-color: #d9ed92;
     border-radius: 50%;
-}
+    cursor: pointer;
+};
 #video{
     width:80%;
     height: 250px;
     z-index: -80;
     position: absolute;
-}
+};
 .projectTitle{
     font-family: 'Montserrat', sans-serif;
     text-transform: uppercase;
@@ -220,7 +213,7 @@ body{
     font-size: 60px;
     margin-top: 10px;
     margin-left: 10px;
-}
+};
 .groupTitles{
     display: flex;
     flex-direction: row;
@@ -228,10 +221,71 @@ body{
     width:100%;
     margin-top: 5%;
     justify-content: space-around;
-}
+};
 .titleProject{
     letter-spacing: 0.3em;
     position: relative;
     font-size: 20px;
     text-shadow: 0px 1px #4895ef;
+};
+.groupHome{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto;
+};
+
+
+
+
+
+
+//responsive
+@media screen and (max-width:1250px) {
+    .circle-app{
+        margin: 0;
+        width: 120px;
+        height: 120px;
+        left: 30px;
+    }
+}
+@media screen and(max-width:1000px) {
+    .titleProject{
+        font-size: 15px;
+    }
+    .projectTitle{
+        font-size: 40px;
+    }
+    .allCircle{
+        flex-direction: column;
+    }
+    .cut-app{
+        font-size: 70px;
+    }
+    .cut-text{
+        font-size: 70px;
+    }
+    .home p {
+        font-size: 16px;
+    }
+}
+@media screen and (max-width:700px) {
+    .cut-app{
+        font-size: 50px;
+        margin-top: 40px;
+    }
+    .cut-text{
+        font-size: 50px;
+    }
+    .websiteCircle{
+        flex-direction: column;
+    }
+    .circleProject{
+        margin: 10px;
+    }
+    .groupTitles{
+        display: none;
+    }
 }
