--- a/manon-website/src/Components/Resume/Resume.scss
+++ b/manon-website/src/Components/Resume/Resume.scss
@@ -4,11 +4,10 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .cut-resume {
-    $random-text: 'Resume';
+    $random-text: 'C.V';
     position: relative;
     text-transform: uppercase;
     font-size: 80px;
-    margin-left: 3em;
     color: transparent;
     font-weight: 400;
     font-family: 'Catamaran', sans-serif;
