--- a/manon-website/src/Components/Home/Home.scss
+++ b/manon-website/src/Components/Home/Home.scss
@@ -18,8 +18,6 @@ body{
     color: #013a63;
     line-height: 1.2;
     letter-spacing: 1px;
-    margin-left: auto;
-    margin-right: auto;
     padding-top: 10px;
     padding-left:30px;
     padding-right: 10px;
@@ -266,12 +264,17 @@ body{
     }
     .home p {
         font-size: 16px;
+        text-align: left;
     }
+    
 }
 @media screen and (max-width:700px) {
     .cut-app{
         font-size: 50px;
         margin-top: 40px;
+    }
+    .groupHome{
+        width: 100%;
     }
     .cut-text{
         font-size: 50px;
@@ -285,16 +288,22 @@ body{
     .groupTitles{
         display: none;
     }
+    
 
 }
 @media screen and (max-width:600px){
     .home{
         width: auto;
         height: auto;
-        border-radius: 10%;
+        border-radius: 0;
     }
     .home p{
-        font-size: 18px;
-        padding-bottom: 10px;
+        font-size: 17px;
+        padding-bottom: 15px;
+        margin: 0;
+        text-align: left;
+    }
+    .groupHome{
+        width: 100%;
     }
 }
