--- a/manon-website/src/Components/Resume/Resume.scss
+++ b/manon-website/src/Components/Resume/Resume.scss
@@ -142,3 +142,31 @@ button{
 .iconsLikes{
     color: #69049f;    
 }
+
+@media screen and (max-width:750px) {
+    .titles{
+        font-size: 28px;
+        padding: 0;
+        margin: 0;
+    }
+    .cut-resume{
+        margin: 20px;
+    }
+    .lineResume{
+        width: 80%;
+    }
+    .formation{
+        text-align: left;
+        font-size: 16px;
+    }
+    p{
+        text-align: center;
+        width: 80%;
+    }
+    .experiencesGroup{
+        margin: 0;
+    }
+    .formationGroup{
+        align-items: center;
+    }
+}
