--- a/manon-website/src/Components/Projects/Projects.scss
+++ b/manon-website/src/Components/Projects/Projects.scss
@@ -158,22 +158,23 @@
   cursor: pointer;
 }
 .buttonWebsite{
-  padding: 5px;
   position: relative;
   border: none;
   border-radius: 15px;
   width: 130px;
   text-decoration: none;
-  text-align: center;
   background: linear-gradient(150deg, #0077b6, #864fe1);
   cursor: pointer;
   margin: 15px;
-  padding: 15px;
+  padding: 10px;
 }
 .buttonWebsite p{
   text-transform: uppercase;
   font-weight: 400;
   letter-spacing: 0.1em;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .buttonLink p{
