almost finished the contact form, need to add some design but it is working. Email link + app

--- a/manon-website/src/Components/Contact/Contact.scss
+++ b/manon-website/src/Components/Contact/Contact.scss
@@ -9,7 +9,8 @@
     align-items: center;
     margin-top: 10px;
     margin-bottom: 10px;
-}
+};
+
 .cut-contact {
     $random-text: 'Contact';
     position: relative;
@@ -39,34 +40,53 @@
       -webkit-clip-path: $path;
       clip-path: $path;
     }
-}
-.contactBox{
-    width: 350px;
-    padding: 20px;
-    border-radius: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    z-index: -1;
-    height: 100%;
-    background-color:#0077b6;
-    margin-bottom: 50px;
-}
-.contactBox p{
-    color: #fff;
-    line-height: 2;
-    letter-spacing: 0.1em;
-    padding: 3px;
-    font-weight: 500;
-    font-family: 'Montserrat', sans-serif;
-}
-.contactBox button{
-    padding: 10px;
-    cursor: pointer;
-    border: none;
-    background-color: #864fe1;
+};
+
+.form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    height: auto;
+    margin: 40px;
     border-radius: 10px;
-    width: 50px;
-    font-weight: 500;
+    width: auto;
+    padding: 20px;
+};
+
+.titleForm{
+    text-align: left;
+    margin: 20px;
     text-transform: uppercase;
-    color: #fff;
+    display: block;
+    color: #013a63;
+};
+
+input{
+    border: none;
+    padding: 15px;
+    border-radius: 3px;
+    box-shadow: 0 2px 6px #000;
+    margin: 8px;
+    width: 40%;
+};
+
+textarea{
+    border: none;
+    padding: 10px;
+    border-radius: 3px;
+    box-shadow: 0 2px 6px #000;
+    margin: 8px;
+    width: 40%;
+};
+
+.paragraph{
+    font-size: 18px;
+    margin: 20px;
+    margin-top: 50px;
+    color: #013a63;
+    text-align: center;
+}
+.linkedin{
+    cursor: pointer;
 }
