added the navlink

--- a/manon-website/src/Components/MySeen/MySeen.scss
+++ b/manon-website/src/Components/MySeen/MySeen.scss
@@ -51,7 +51,7 @@
 }
 .videoGroup{
     background-color: #973465;
-    width: 200px;
+    width: auto;
     position: sticky;
 }
 .iconsGroup{
@@ -93,4 +93,7 @@
     justify-content: space-evenly;
     width: 50%;
     margin-top: -1em;
+}
+.videoGeneaka{
+    width: 600px;
 }
