--- a/manon-website/src/Components/Home/Home.scss
+++ b/manon-website/src/Components/Home/Home.scss
@@ -19,7 +19,7 @@ body{
     cursor: pointer;
 };
 .testHome{
-    margin: 5vw;
+    margin: 3vw;
 }
 //CREATE
 .bigTitle{
@@ -135,11 +135,12 @@ body{
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 50%;
-    margin-top: -2em;
+    width: 80%;
     justify-content: space-around;
     position: relative;
     top: 50px;
+    margin-top: -2em;
+    margin-left: -1em;
 }
 .iconGroup li{
     margin: 20px;
@@ -149,6 +150,36 @@ body{
 }
 .textDEv{
     font-family: "Montserrat", sans-serif;
+    margin-left: 3em;
+}
+.goupe{
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    margin-top: 0;
+    width: 90%;
+}
+.formulaire input{
+    width: 250px;
+    margin: 1em;
+}
+.formulaire textarea{
+    width: 260px;
+    height: 100px;
+}
+.formulaire h4{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 200;
+}
+.contactForm{
+    width: 100%;
+    height: auto;
+}
+.formulaire{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: auto;
 }
 //responsive
 
