--- a/manon-website/src/Components/Home/Home.scss
+++ b/manon-website/src/Components/Home/Home.scss
@@ -158,6 +158,7 @@ body{
     align-items: baseline;
     margin-top: 0;
     width: 90%;
+    margin-top: -2em;
 }
 .formulaire input{
     width: 250px;
