--- a/manon-website/src/App.css
+++ b/manon-website/src/App.css
@@ -30,3 +30,14 @@
         height: auto;
     }
 }
+.appButton{
+    border-radius: 50%;
+    padding: 30px;
+    background-color: #973465;
+    width: 75px;
+    position: sticky;
+    margin: 2em;
+    top: 160px;
+    height: 75px;
+    box-shadow: 3px 3px 3px #000;
+}
