--- a/manon-website/src/Components/Home/Home.scss
+++ b/manon-website/src/Components/Home/Home.scss
@@ -182,5 +182,29 @@ body{
     align-items: center;
     width: auto;
 }
+input{
+    border: none;
+    padding: 15px;
+    border-radius: 3px;
+    box-shadow: 0 2px 6px #000;
+    margin: 8px;
+    font-weight: 300;
+    text-transform: capitalize;
+    color: #000;
+    font-family: 'Montserrat', sans-serif;
+    width: 40%;
+};
+textarea{
+    border: none;    
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    padding: 10px;
+    color: #000;
+    text-transform: capitalize;
+    border-radius: 3px;
+    box-shadow: 0 2px 6px #000;
+    margin: 8px;
+    width: 40%;
+};
 //responsive
 
